# PRiR

./: CMakeLists.txt  lab01.h  lab02.cpp  lab02.h  lab03.cpp  lab03.h  lab04.cpp  lab04.h  lab05.cpp  lab05.h  lab06.cpp  lab06.h  lab07.cpp  lab07.h  lab08.cpp  lab08.h  main  main.cpp  semafor.cpp  semafor.h
